--- a/app/src/main/res/layout/activity_zhuce.xml
+++ b/app/src/main/res/layout/activity_zhuce.xml
@@ -24,7 +24,7 @@
             android:text="              MissPhoto"
             android:textSize="25dp"
             android:paddingTop="10dp"/>
-
+//test
     </LinearLayout>
     <LinearLayout
         android:layout_width="350dp"
