--- a/app/src/main/res/drawable/zhijiao.xml
+++ b/app/src/main/res/drawable/zhijiao.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFFFF"/>
-     <corners android:radius="3dp"/>
-    <stroke 
-        android:color="#cccccc"
-        android:width="2px" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <!-- 填充颜色 -->
+    <solid android:color="#FFFFFF"></solid>
+
+    <!-- 线的宽度，颜色灰色 -->
+    <stroke android:width="1dp" android:color="#BBBBBB"></stroke>
+
+    <!-- 矩形的圆角半径 -->
+    <corners android:radius="0dp" />
 </shape>
