--- a/app/src/main/res/layout/layout_camera.xml
+++ b/app/src/main/res/layout/layout_camera.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="画作浏览界面"
+        android:text="画作浏览界面1"
         android:textSize="30sp"/>
 
 </LinearLayout>
