--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,90 @@
     android:layout_height="match_parent"
     tools:context="com.example.administrator.missphoto.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/contaner"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_weight="5">
+    </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="bottom">
+
+
+        <!--主页-->
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/btn_home"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/fraghome"/>
+
+        </LinearLayout>
+
+        <!--画作浏览页-->
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/btn_camera"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/fragcamera"/>
+
+        </LinearLayout>
+        <!--发布-->
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/btn_post"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/fragpost"/>
+
+        </LinearLayout>
+        <!--需求浏览页-->
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/btn_request"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/fragrequest"/>
+
+        </LinearLayout>
+        <!--个人空间-->
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/btn_mine"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/fragmine"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
