修正fregament框架的代码。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
                 android:src="@drawable/fragcamera"/>
 
         </LinearLayout>
-        <!--发布-->
+        <!--发布页-->
         <LinearLayout
             android:gravity="center"
             android:layout_weight="1"
