//上传界面已完成，已添加至fragement框架下。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/ll"
+    android:background="#fff"
     tools:context="com.example.administrator.missphoto.MainActivity">
 
     <FrameLayout
