--- a/app/src/main/res/layout/entry_activity.xml
+++ b/app/src/main/res/layout/entry_activity.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:src="@drawable/touxiang3"
         android:layout_gravity="center"
-        android:paddingTop="20dp"/>
+        android:background="#fff"
+        android:layout_marginTop="10dp"/>
 
    <LinearLayout
 
@@ -20,7 +21,7 @@
        android:layout_height="wrap_content"
        android:background="@drawable/zhijiao"
        android:orientation="vertical"
-       android:padding="10dp">
+       android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/nicheng7"
            android:padding="10dp"
