--- a/app/src/main/res/layout/layout_request.xml
+++ b/app/src/main/res/layout/layout_request.xml
@@ -7,8 +7,6 @@
     android:scrollbars="vertical"
     android:fadingEdge="vertical"
     android:background="#EAF8FD">
-
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -31,7 +29,7 @@
         android:background="@drawable/yuanjiao">
 
         <ImageButton
-            android:background="#0000000"
+            android:background="#ffffff"
             android:src="@drawable/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
