--- a/app/src/main/res/layout/layout_camera.xml
+++ b/app/src/main/res/layout/layout_camera.xml
@@ -4,17 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     tools:context="com.example.administrator.missphoto.MainActivity">
+
+
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="50dp"
+                android:src="@drawable/btn_back"
+                android:background="#ffffff"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="MissPhoto"
+                android:textSize="18dp"
+                android:paddingLeft="100dp"
+                android:paddingTop="10dp"
+                android:background="#ffffff"/>
+        </LinearLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -52,30 +72,33 @@
             android:layout_marginRight="5sp"
             android:src="@drawable/shili5"
             android:layout_gravity="center"/>
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="30sp">
             <!-- 显示点赞数 -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="91位用户点赞"
-                android:textSize="19sp"
+                android:textSize="15sp"
                 android:layout_marginLeft="30sp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 />
             <!-- 点赞按钮 -->
-            <Button
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="点赞"
-                android:textSize="12sp"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/yuanjiao"
-                android:drawableLeft="@drawable/like"/>
-        </RelativeLayout>
+                android:gravity="end">
+                <ImageButton
+                    android:background="#00000000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/like" />
+            </LinearLayout>
+
+        </LinearLayout>
         <!-- 评论 -->
         <EditText
             android:layout_width="match_parent"
