--- a/app/src/main/res/layout/layout_camera.xml
+++ b/app/src/main/res/layout/layout_camera.xml
@@ -1,111 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="0dp"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
-    tools:context="com.example.administrator.missphoto.MainActivity">
-
-
-
-
-    <LinearLayout
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorAccentzs"
+    tools:context="com.example.administrator.missphoto.MainActivity"
+    android:weightSum="1">
+    <RelativeLayout
+        android:background="@drawable/yuanjiao"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:layout_height="40dp">
+
+        <ImageButton
+            android:layout_width="33dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/btn_back"
+            />
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="50dp"
-                android:src="@drawable/btn_back"
-                android:background="#ffffff"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="MissPhoto"
-                android:textSize="18dp"
-                android:paddingLeft="100dp"
-                android:paddingTop="10dp"
-                android:background="#ffffff"/>
-        </LinearLayout>
+            android:text="MissPhoto"
+            android:layout_gravity="center"
+            android:textSize="@dimen/abc_action_bar_content_inset_material"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:background="@color/colorPrimaryDarkzs"
+        android:layout_width="match_parent"
+        android:layout_height="478dp"
+        android:layout_margin="16dp">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <!-- 头像 -->
-            <ImageView
+            android:layout_height="44dp">
+            <ImageButton
                 android:id="@+id/IvCameraHeadportrait"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/touxiang1"/>
-            <!-- 名字 -->
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_margin="8dp"
+                android:background="@drawable/touxiang1" />
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10sp"
                 android:layout_toRightOf="@id/IvCameraHeadportrait"
-                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="奇异博士"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textAllCaps="true" />
-            <!-- 关注 -->
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/follow"/>
+                android:textStyle="bold"
+                android:layout_marginLeft="44dp"
+                android:layout_marginTop="13dp"/>
+            <Button
+                android:layout_width="66dp"
+                android:layout_height="23dp"
+                android:background="@drawable/yuanjiao"
+                android:paddingLeft="7dp"
+                android:layout_marginLeft="219dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="11dp"
+                android:drawableLeft="@drawable/userme"
+                android:text="关注">
+            </Button>
         </RelativeLayout>
-        <!-- 作品展示 -->
-        <ImageView
-            android:layout_width="239dp"
-            android:layout_height="339dp"
-            android:adjustViewBounds="true"
-            android:layout_marginTop="20sp"
-            android:layout_marginLeft="5sp"
-            android:layout_marginRight="5sp"
-            android:src="@drawable/shili5"
-            android:layout_gravity="center"/>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30sp">
-            <!-- 显示点赞数 -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="91位用户点赞"
-                android:textSize="15sp"
-                android:layout_marginLeft="30sp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
-                />
-            <!-- 点赞按钮 -->
-            <LinearLayout
+            android:layout_marginTop="40dp">
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="end">
-                <ImageButton
-                    android:background="#00000000"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/like" />
-            </LinearLayout>
-
-        </LinearLayout>
-        <!-- 评论 -->
-        <EditText
+                android:layout_height="320dp"
+                android:background="@drawable/shili5" />
+        </RelativeLayout>
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/zhijiao"
-            android:layout_marginTop="15dp"
-            android:hint="请输入你的评论"/>
-    </LinearLayout>
+            android:layout_marginTop="366dp">
+            <Button
+                android:layout_width="118dp"
+                android:layout_height="23dp"
+                android:background="@drawable/yuanjiao"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="5dp"
+                android:drawableLeft="@drawable/liked"
+                android:scaleType="fitXY"
+                android:text="91位用户点赞">
+            </Button>
+            <Button
+                android:layout_width="62dp"
+                android:layout_height="23dp"
+                android:background="@drawable/yuanjiao"
+                android:layout_marginLeft="219dp"
+                android:layout_marginTop="5dp"
+                android:drawableLeft="@drawable/like"
+                android:text="点赞"
+                >
+            </Button>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="400dp">
+            <EditText
+                android:layout_width="278dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/yuanjiao"
+                android:hint="请输入您的评论"/>
+        </RelativeLayout>
+    </RelativeLayout>
 
-</ScrollView>
+</LinearLayout>
+
+
+
+
