修改首页轮播图卡顿问题，优化登录页面布局

--- a/app/src/main/res/layout/layout_mine.xml
+++ b/app/src/main/res/layout/layout_mine.xml
@@ -4,16 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#fff"
+    android:background="#EAF8FD"
     tools:context="com.example.administrator.missphoto.MainActivity">
 
      <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="-----登录方式-----"
+        android:text="-----请先登录-----"
          android:layout_gravity="center"
          android:gravity="center"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="300dp"
         android:textSize="20sp"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,27 +24,24 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:src="@drawable/qq"
-            android:layout_marginLeft="25dp"
             android:id="@+id/btn_mine_qq"
-            android:background="#fff"
+            android:background="#EAF8FD"
             android:layout_marginTop="20dp"/>
         <ImageButton
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:src="@drawable/phone"
-            android:layout_marginLeft="45dp"
             android:id="@+id/btn_mine_phone"
-            android:background="#fff"
+            android:background="#EAF8FD"
             android:layout_marginTop="20dp"/>
         <ImageButton
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:src="@drawable/weibo"
-            android:background="#fff"
+            android:background="#EAF8FD"
             android:id="@+id/btn_mine_weibo"
-            android:layout_marginLeft="45dp"
             android:layout_marginTop="20dp"/>
     </LinearLayout>
 
